# QuantumCanvas

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py  models.py
backend/app/routers/: circuit.py
backend/app/services/: optimization_passes.py
backend/app/utils/: circuit_conversions.py
backend/tests/: test_circuit_endpoints.py  test_pennylane_conversions.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
