[tool.poetry]
name = "quantum"
version = "0.1.0"
description = "Backend for QuantumCanvas"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
# Circuit parsing & serialization
openqasm3 = ">=1.0.0,<2.0.0"
qiskit = "^1.1.0"
cirq = "^1.3.0"
pennylane = "^0.37.0"
# Internal circuit model & transforms
networkx = "^3.3"
numpy = "^1.26.4"
scipy = "^1.14.0"
# Benchmarking / simulation (optional for now, can be added later)
# qiskit-aer = "..."
# pennylane-lightning = "..."
# qulacs = "..."
# Optimization (optional for now)
# pytket = "..."
pyqasm = "^0.2.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
hypothesis = "^6.100.5"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"